--- a/mystyle.css
+++ b/mystyle.css
@@ -47,3 +47,12 @@ ul.jump-bar li {
  display: inline ;
  font-weight: bold ;
 }
+
+a:link {
+  color: #2aa198;
+}
+
+/* visited link */
+a:visited {
+  color: #586e75;
+}
