css is the way.

--- a/mystyle.css
+++ b/mystyle.css
@@ -56,3 +56,10 @@ a {
 a:visited {
   color: #586e75;
 }
+
+.profile {
+    float: right;
+    margin: 0 0 0.5em 0.5em;
+    max-width: 30%;
+    height: auto;
+}
