--- a/mystyle.css
+++ b/mystyle.css
@@ -60,6 +60,7 @@ a:visited {
 img.profile {
     float: right;
     margin: 0 0 0.5em 0.5em;
+    width: auto;
     max-width: 30%;
     height: auto;
 }
